# q2-perc-norm

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py  test-documentation.md
environment-files/: q2-perc-norm-qiime2-amplicon-2025.7.yml  q2-perc-norm-qiime2-tiny-2025.7.yml  q2-perc-norm-qiime2-tiny-dev.yml  q2-perc-norm-qiime2-tiny-release.yml
pyinstrument/: meta.yaml
q2_perc_norm/: __init__.py  _methods.py  _percentile_normalize.py  _version.py  citations.bib  plugin_setup.py
q2_perc_norm/tests/: __init__.py  test_methods.py
recipe/: meta.yaml
test_data/: make_fake_data.py  test_metadata.txt  test_otu_table.transpose.qza  test_out.percentile_qiime.qza
